assets/style.css
/*google fonts - inspiration taken from https://www.fontpair.co/all 
font-family: 'Lato', sans-serif;
font-family: 'Playfair Display', serif;
*/
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display&display=swap');

/*global styles*/
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-image: linear-gradient(to right top, #385b4f, #436758, #4f7361, #5b7f6a, #688b73, #72957c, #7ca084, #87aa8d, #91b597, #9cc1a2, #a6ccac, #b1d8b7);
    width: 100vw;
    height: 100vh;
    color: #223B33
}

h1, h2 {
    font-family: 'Playfair Display', serif;
    padding: 0 1rem;
    text-align: center;
}

p {
    font-family: 'Lato', sans-serif;
}

/*containers*/
.container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background-color: #F4F6F1;
    border-radius: 1rem;
    box-shadow: 0 0 1rem 1px #223B33;
    width: 80vw;
    max-width: 800px;
    height: auto;
    min-height: 60vh;
    margin: 2rem;
    padding: 1rem;
}

.container-content {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    height: 100%;
    width: 100%;
}

.home-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

/*buttons*/
.button {
    font-family: 'Lato', sans-serif;
    padding: 1rem;
    border: solid 1px #223B33;
    border-radius: 1rem;
    width: 40%;
    box-shadow: 1px 1px 5px 1px #223B33;
    background-color: #F4F6F1;
    transition: all 0.4s;
}

.button:hover:not([disabled]) {
    box-shadow: 1px 1px 10px 4px #223B33;
    cursor: pointer;
}

.home-screen-buttons {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 40vh;
}

/*close 'x' button*/
.back-button {
    border: none;
    font-size: 160%;
}

.close-button-container {
    width: 100%;
    display: flex;
    justify-content: flex-end;
}

#submit-btn, #next-btn {
    width: 10rem;
    font-family: 'Playfair Display', serif;
    font-size: 150%;
    background-color: #B1D8B7;

}

.selected {
    background-color: #385B4F;
    color: #F4F6F1;
}

.correct {
    background-color: rgb(23, 178, 23);
}

.incorrect {
    background-color: red;
    color: #223B33;
}

#difficulty-options {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 10vh 0;
}

/*Enter name screen*/
.name-question {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 90%;
    width: 90%;
}

#name {
    margin: 2rem 4rem 4rem 4rem;
    padding: 1rem;
    font-family: 'Lato', sans-serif;
    font-size: 1.3em;
    text-align: center;
    width: 80%;
    height: 3rem;
    border-radius: 1rem;
    border: solid 1px #223B33;
    box-shadow: 1px 1px 5px 1px #223B33;
}

form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#submit {
    color: #223B33;
}

/*game screen*/
.answer-buttons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.question-btn {
    margin: 1rem;
    min-width: 250px
}

.game-score {
    display: flex;
    justify-content: space-around;
    width: 100%;
    padding: 10px 30px;
}

#spacer {
    height: 2.3rem;
}

#question {
    height: 4rem;
}

@media only screen and (max-width: 745px)  {
  /*Game screen*/
    #spacer {
        height: 4.1rem;
    }

    #question {
        font-size: 1.2em;
    }

    #next-button {
        font-size: 1.2em;
    }

    /*Game Over screen*/
    #navigation-buttons button {
        font-size: 1.2em;
        margin: 1rem;
    }

    /*Select difficulty screen*/
    #difficulty-options button {
        font-size: 1.2em;
        margin: 1rem;
        width: 10rem;   
    }
}

/*End game container*/

#navigation-buttons {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 60%;
}

#home-btn, #play-again-btn, #high-scores-btn {
    max-width: 15rem;
    width: 163px;
    height: 4rem;
    font-family: 'Playfair Display', serif;
    font-size: 150%;
}

#end-game-container h2 {
    font-size: 180%;
    margin-bottom: 1rem;
}

#end-game-container p {
    font-size: 120%;
    text-align: center;
    margin-bottom: 1rem;
}

/*Rules container*/

.rules {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 100%;
    text-align: center;
    font-size: 1.3em;
    padding-top: 1rem;
    overflow: auto;
}

.rules p {
    margin-bottom: 1rem;
}

.hide {
    display: none;
}

/* Scoreboard */
.high-score {
    list-style: none;
    padding: 1rem;
    font-family: 'Lato', sans-serif;
    font-size: 1.3em;
}

